2005-02-06  Mark Wielaard  <mark@klomp.org>

	Based on a suggestion from Amit Jain (amitrjain@hotmail.com)
	* gnu/testlet/java/lang/String/split.java: New test.

2005-02-02  David Daney <ddaney@avtrex.com>

	* gnu/testlet/java/net/InetAddress/getByAddress.java:
	New testcase.

2005-02-02  David Daney <ddaney@avtrex.com>

	* gnu/testlet/java/util/GregorianCalendar/getMinimum.java:
	New testcase.

2005-02-02  David Daney <ddaney@avtrex.com>

	* gnu/testlet/java/lang/Thread/security10.java:
	Allow setSecurityManager.

2005-02-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/text/SimpleDateFormat/Localization.java:
	Check that the class properly translates to and from localized
	pattern strings, and that the constructor only handles
	non-localized patterns.

2005-02-01  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/beans/Beans/instantiate_1.java:
	Fixed to use the correct class loader.

2005-01-31  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/Thread/security10.java:
	Added code to save and restore security manager.

2005-01-28  Bryce McKinlay  <mckinlay@redhat.com>

        * gnu/testlet/java/util/Date/getTimezoneOffset.java: New test. 
        * gnu/testlet/java/util/Date/range.java: Remove DOS CRLF chars.
        * Makefile.in, aclocal.m4, configure: Rebuilt.

2005-01-27  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/util/zip/ZipFile/newZipFile.java:
	Added new testcase for non-zip files.

2005-01-22  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/Introspector/getBeanInfoTestClass.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2TestClass.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2.java:
	Fixed documentation and mauve tags.

2005-01-22  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/Beans.java: Fixed JDK Tag.
